# rucksack

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/rucksack/: rucksack.h
core/src/: rucksack.c
packer/: CMakeLists.txt
packer/src/: main.c
unpacker/: CMakeLists.txt
unpacker/include/rucksack/unpacker/: unpacker.h
unpacker/src/: file.c  file_unix.c  file_win32.c  main.c  stream.c
